<resources>
    <string name="app_name">Rick and Morty Universe</string>
    <string name="app_title">The Rick and Morty Universe</string>
    <string name="launcher_quote">“ I’m a scientist; because I invent, transform, create, and destroy for a living, and when I don’t like something about the world, I change it. ”\n— Pickle Rick</string>
    <string name="character_s_image_desc">Character\'s Image</string>
    <string name="label_species">Species:</string>
    <string name="label_type">Type:</string>
    <string name="label_gender">Gender:</string>
    <string name="label_status">Status:</string>
    <string name="app_logo_desc">App Logo</string>
    <string name="progress_message">“Wubba Lubba Dub Dub!”\n— Rick</string>
</resources>